manifests/production/infrastructure/controllers/virtink/apps_v1_daemonset_virt-daemon.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: virt-daemon
  namespace: virtink-system
spec:
  selector:
    matchLabels:
      name: virt-daemon
  template:
    metadata:
      labels:
        name: virt-daemon
    spec:
      containers:
      - args:
        - --zap-time-encoding=iso8601
        image: smartxworks/virt-daemon:v0.17.0@sha256:11a9a7e2ab9158f93480222de40ba1ef7a4389d284f863423ac0601967c5cbd8
        name: virt-daemon
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /var/lib/kubelet/pods
          mountPropagation: Bidirectional
          name: kubelet-pods
        - mountPath: /var/lib/virtink/daemon/cert
          name: cert
          readOnly: true
        - mountPath: /var/lib/kubelet/device-plugins
          name: device-plugins
        - mountPath: /dev
          mountPropagation: HostToContainer
          name: devices
        - mountPath: /var/run/virtink
          name: virtink
      hostPID: true
      serviceAccountName: virt-daemon
      volumes:
      - hostPath:
          path: /var/lib/kubelet/pods
        name: kubelet-pods
      - name: cert
        secret:
          defaultMode: 420
          secretName: virt-daemon-cert
      - hostPath:
          path: /var/lib/kubelet/device-plugins
        name: device-plugins
      - hostPath:
          path: /dev
        name: devices
      - hostPath:
          path: /var/run/virtink
        name: virtink
