manifests/production/infrastructure/controllers/virtink/v1_service_virt-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: virt-controller
  namespace: virtink-system
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    name: virt-controller
