manifests/production/infrastructure/controllers/virtink/admissionregistration.k8s.io_v1_mutatingwebhookconfiguration_virtink-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: virtink-system/virt-controller-cert
  creationTimestamp: null
  name: virtink-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: virt-controller
      namespace: virtink-system
      path: /mutate-v1alpha1-virtualmachine
  failurePolicy: Fail
  name: mutate.virtualmachine.v1alpha1.virt.virtink.smartx.com
  rules:
  - apiGroups:
    - virt.virtink.smartx.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualmachines
  sideEffects: None
