manifests/production/infrastructure/controllers/virtink/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_virtink-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: virtink-system/virt-controller-cert
  creationTimestamp: null
  name: virtink-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: virt-controller
      namespace: virtink-system
      path: /validate-v1alpha1-virtualmachine
  failurePolicy: Fail
  name: validate.virtualmachine.v1alpha1.virt.virtink.smartx.com
  rules:
  - apiGroups:
    - virt.virtink.smartx.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualmachines
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: virt-controller
      namespace: virtink-system
      path: /validate-v1alpha1-virtualmachinemigration
  failurePolicy: Fail
  name: validate.virtualmachinemigration.v1alpha1.virt.virtink.smartx.com
  rules:
  - apiGroups:
    - virt.virtink.smartx.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualmachinemigrations
  sideEffects: None
